cmake_minimum_required(VERSION 3.17)
project(simplebf)

set(CMAKE_CXX_STANDARD 17)
option(PEGTL_BUILD_TESTS OFF)
option(PEGTL_BUILD_EXAMPLES OFF)
find_package(LLVM REQUIRED CONFIG)
message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")

add_subdirectory(PEGTL EXCLUDE_FROM_ALL)
include_directories(cxxopts/include)
add_executable(simplebf main.cpp)
target_compile_definitions(simplebf PRIVATE ${LLVM_DEFINITIONS})
target_link_libraries(simplebf taocpp::pegtl LLVM)
set_property(TARGET "simplebf" APPEND_STRING PROPERTY LINK_FLAGS "${LLVM_LINK_FLAGS}")